# golPlayground

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  INSTALL.sh  LICENSE  README.md
Application/: CMakeLists.txt  main.cpp
Documentation/: Doxyfile.in
Tests/: CMakeLists.txt
docs/: _config.yml  index.md
