SET( APP_TARGET "golPlayground" )

SET(
    APP_LIBRARIES
    ${SFML_LIBRARIES}
    ${TGUI_LIBRARY}
)

FILE( GLOB_RECURSE APP_SOURCES main.cpp )

ADD_EXECUTABLE(
    ${APP_TARGET}
    ${APP_SOURCES}
    ${APP_HEADERS}
    ${APP_INLINES}
    ${GOL_FILES}
)

TARGET_LINK_LIBRARIES(
    ${APP_TARGET}
    ${APP_LIBRARIES}
)

FILE( COPY "${CMAKE_CURRENT_SOURCE_DIR}/Assets" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/." )