SET( APP_TARGET "golTests" )

SET(
    APP_LIBRARIES
    ${SFML_LIBRARIES}
    ${TGUI_LIBRARY}
)

FILE( GLOB_RECURSE APP_SOURCES main.cpp )

ADD_EXECUTABLE(
    ${APP_TARGET}
    ${APP_SOURCES}
    ${APP_HEADERS}
    ${APP_INLINES}
    ${GOL_FILES}
)

TARGET_LINK_LIBRARIES(
    ${APP_TARGET}
    ${APP_LIBRARIES}
)